merian_src = files(
    'io/dds.cpp',
    'io/file_loader.cpp',
    'io/image_io.cpp',
    'io/tinyobj.cpp',
    'utils/audio/audio_device.cpp',
    'utils/camera/camera.cpp',
    'utils/camera/camera_animator.cpp',
    'utils/concurrent/thread_pool.cpp',
    'utils/imgui_spdlog_sink.cpp',
    'utils/input_controller.cpp',
    'utils/input_controller_dummy.cpp',
    'utils/normal_encoding.cpp',
    'utils/properties_imgui.cpp',
    'utils/properties_json_dump.cpp',
    'utils/properties_json_load.cpp',
    'utils/renderdoc.cpp',
    'utils/stopwatch.cpp',
    'vk/command/caching_command_pool.cpp',
    'vk/command/command_buffer.cpp',
    'vk/command/command_pool.cpp',
    'vk/command/queue.cpp',
    'vk/descriptors/descriptor_buffer.cpp',
    'vk/descriptors/descriptor_container.cpp',
    'vk/descriptors/descriptor_pool.cpp',
    'vk/descriptors/descriptor_set.cpp',
    'vk/descriptors/descriptor_set_layout.cpp',
    'vk/descriptors/push_descriptor_set.cpp',
    'vk/context.cpp',
    'vk/device.cpp',
    'vk/instance.cpp',
    'vk/physical_device.cpp',
    'vk/extension/extension.cpp',
    'vk/extension/extension_registry.cpp',
    'vk/extension/extension_resources.cpp',
    'vk/extension/extension_vk_debug_utils.cpp',
    'vk/extension/extension_vma.cpp',
    'vk/utils/vulkan_extensions.cpp',
    'vk/utils/vulkan_features.cpp',
    'vk/utils/vulkan_properties.cpp',
    'vk/utils/vulkan_spirv.cpp',
    'vk/memory/bump_memory_allocator.cpp',
    'vk/memory/frame_staging_block.cpp',
    'vk/memory/memory_allocator.cpp',
    'vk/memory/memory_allocator_vma.cpp',
    'vk/memory/memory_suballocator_vma.cpp',
    'vk/memory/resource_allocations.cpp',
    'vk/memory/resource_allocator.cpp',
    'vk/memory/staging_memory_manager.cpp',
    'vk/pipeline/pipeline_graphics_builder.cpp',
    'vk/pipeline/pipeline_ray_tracing_builder.cpp',
    'vk/pipeline/specialization_info_builder.cpp',
    'vk/raytrace/as_builder_blas.cpp',
    'vk/raytrace/shader_binding_table.cpp',
    'vk/raytrace/as_builder_tlas.cpp',
    'vk/raytrace/as_compressor.cpp',
    'vk/renderpass/renderpass.cpp',
    'vk/renderpass/renderpass_builder.cpp',
    'vk/sampler/sampler_pool.cpp',
    'vk/sync/semaphore_timeline.cpp',
    'vk/utils/barriers.cpp',
    'vk/utils/cpu_queue.cpp',
    'vk/utils/profiler.cpp',
    'vk/utils/vk_enums.cpp',
    'vk/window/swapchain.cpp',
    'vk/window/window.cpp',
)

if get_option('glfw').enable_auto_if(glfw.found()).enabled()
    merian_src += files(
        'vk/extension/glfw/extension_glfw.cpp',
        'vk/extension/glfw/glfw_window.cpp',
    )
endif

if get_option('sdl').enable_auto_if(sdl3.found()).enabled()
    merian_src += files(
        'vk/extension/sdl/extension_sdl.cpp',
        'vk/extension/sdl/extension_sdl_audio.cpp',
        'vk/extension/sdl/extension_sdl_video.cpp',
        'vk/extension/sdl/sdl_audio_device.cpp',
        'vk/extension/sdl/sdl_window.cpp',
    )
endif

subdir('shader')
subdir('vk/imgui')

merian_lib = static_library(
    'merian',
    [merian_src],
    dependencies: [
        fmt,
        glfw,
        glm,
        glslang,
        imgui,
        nlohmann_json,
        sdl3,
        shaderc,
        slang,
        spdlog,
        spirv_reflect,
        stb,
        subprocess,
        tgltf,
        tol,
        vma,
        vulkan,
    ],
    include_directories: inc_dirs,
    install : true
)
