merian_graph_src += files(
    'any_in.cpp',
    'any_out.cpp',
    'buffer/vk_buffer_in.cpp',
    'buffer/vk_buffer_out.cpp',
    'buffer/vk_buffer_out_managed.cpp',
    'image/vk_image_in.cpp',
    'image/vk_image_in_sampeled.cpp',
    'image/vk_image_in_storage.cpp',
    'image/vk_image_out.cpp',
    'image/vk_image_out_managed.cpp',
    'vk_tlas_in.cpp',
    'vk_tlas_out.cpp',
)
