# keep this list sorted

subdir('ab_compare')
subdir('accumulate')
subdir('bloom')
subdir('color_image')
subdir('compute_node')
subdir('exposure')
subdir('fbx_scene')
subdir('fxaa')
subdir('gbuffer_debug')
subdir('gbuffer_rt')
subdir('gltf_scene')
subdir('image_read')
subdir('image_write')
subdir('imgui')
subdir('mean')
subdir('median_approx')
subdir('reduce')
subdir('render_pt')
subdir('render_pt_mcpg')
subdir('render_restir_di')
subdir('shadertoy')
subdir('svgf')
subdir('swapchain_blit')
subdir('taa')
subdir('tonemap')
subdir('vkdt_filmcurv')
subdir('window')
