merian_nodes_src += files(
    'any_in.cpp',
    'any_out.cpp',
    'managed_vk_buffer_in.cpp',
    'managed_vk_buffer_out.cpp',
    'managed_vk_image_out.cpp',
    'unmanaged_vk_image_out.cpp',   
    'vk_buffer_array_in.cpp',
    'vk_buffer_array_out.cpp',
    'vk_image_in.cpp',
    'vk_image_out.cpp',
    'vk_texture_in.cpp',
    'vk_tlas_in.cpp',
    'vk_tlas_out.cpp',
)
