# keep this list sorted

subdir('ab_compare')
subdir('accumulate')
subdir('blit')
subdir('bloom')
subdir('color_image')
subdir('compute_node')
subdir('exposure')
subdir('fxaa')
subdir('image_read')
subdir('image_write')
subdir('mean')
subdir('median_approx')
subdir('reduce')
subdir('shadertoy')
subdir('svgf')
subdir('taa')
subdir('tonemap')
subdir('vkdt_filmcurv')
